--- a/template/index.html
+++ b/template/index.html
@@ -11,7 +11,12 @@
   <title>Wheather app</title>
 </head>
 
-<body data-bs-theme="dark">
+<body class="bg-image" style="
+background-image: url('https://nordicapis.com/wp-content/uploads/How-to-Build-an-API-Driven-Weather-App-1024x576.png');
+height: 100vh;
+">
+  <!-- 
+  <img src="https://nordicapis.com/wp-content/uploads/How-to-Build-an-API-Driven-Weather-App-1024x576.png" class="">-->
   <div class="container">
     <nav class="navbar navbar-dark bg-success">
       <div class="container">
